--- a/analysis.html
+++ b/analysis.html
@@ -333,18 +333,17 @@ continuous exposure.</p>
 <h3>Introduction to Propensity Score Model</h3>
 <p>The propensity score is the probability of treatment assignment
 conditional on observed baseline characteristics.</p>
-<p>The propensity score is the probability of treatment assignment
-conditional on observed baseline characteristics. In order to estimate
-the effects of treatments, interventions, and exposures (hereafter
-referred to as treatments), randomized controlled trials (RCTs) are
-considered the gold standard. In this way, the treatment status will not
-be confounded with measured or unmeasured baseline characteristics.
-Therefore, the effect of treatment on outcomes can be estimated by
-comparing outcomes directly between treated and untreated subjects. An
-observational study can be designed and analyzed using a propensity
-score in a way that mimics some of the characteristics of a randomized
-controlled trial. In particular, the propensity score is a balancing
-score: conditional on the propensity score, the distribution of observed
+<p>In order to estimate the effects of treatments, interventions, and 
+exposures (hereafter referred to as treatments), randomized controlled 
+trials (RCTs) are considered the gold standard. In this way, the 
+treatment status will not be confounded with measured or unmeasured 
+baseline characteristics. Therefore, the effect of treatment on 
+outcomes can be estimated by comparing outcomes directly between 
+treated and untreated subjects. An observational study can be 
+designed and analyzed using a propensity score in a way that mimics 
+some of the characteristics of a randomized controlled trial. 
+In particular, the propensity score is a balancing score: 
+conditional on the propensity score, the distribution of observed
 baseline covariates will be similar between treated and untreated
 subjects. (Austin, 2011)</p>
 <div id="dgabwknrsa" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
