--- a/code.html
+++ b/code.html
@@ -287,33 +287,34 @@ $(document).ready(function () {
 <p>Source of data: <a
 href="https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv"
 class="uri">https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv</a></p>
-<p>ID: Customer’s unique identifier Year_Birth: Customer’s birth year
-Education: Customer’s education level Marital_Status: Customer’s marital
-status Income: Customer’s yearly household income Kidhome: Number of
-children in customer’s household Teenhome: Number of teenagers in
-customer’s household Dt_Customer: Date of customer’s enrollment with the
-company Recency: Number of days since customer’s last purchase Complain:
-1 if the customer complained in the last 2 years, 0 otherwise</p>
-<p>MntWines: Amount spent on wine in last 2 years MntFruits: Amount
-spent on fruits in last 2 years MntMeatProducts: Amount spent on meat in
-last 2 years MntFishProducts: Amount spent on fish in last 2 years
-MntSweetProducts: Amount spent on sweets in last 2 years MntGoldProds:
-Amount spent on gold in last 2 years</p>
-<p>NumDealsPurchases: Number of purchases made with a discount
-AcceptedCmp1: 1 if customer accepted the offer in the 1st campaign, 0
-otherwise AcceptedCmp2: 1 if customer accepted the offer in the 2nd
-campaign, 0 otherwise AcceptedCmp3: 1 if customer accepted the offer in
-the 3rd campaign, 0 otherwise AcceptedCmp4: 1 if customer accepted the
-offer in the 4th campaign, 0 otherwise AcceptedCmp5: 1 if customer
-accepted the offer in the 5th campaign, 0 otherwise Response: 1 if
-customer accepted the offer in the last campaign, 0 otherwise</p>
-<p>NumWebPurchases: Number of purchases made through the company’s
-website NumCatalogPurchases: Number of purchases made using a catalogue
-NumStorePurchases: Number of purchases made directly in stores
-NumWebVisitsMonth: Number of visits to company’s website in the last
-month</p>
-<p>TotalPurchase is the sum of NumWebPurchases, NumCatalogPurchases, and
-NumStorePurchases.</p>
+<p>ID: Customer’s unique identifier
+<p>Year_Birth: Customer’s birth year</p>
+<p>Education: Customer’s education level</p>
+<p>Marital_Status: Customer’s marital status</p>
+<p>Income: Customer’s yearly household income</p>
+<p>Kidhome: Number of children in customer’s household</p>
+<p>Teenhome: Number of teenagers in customer’s household</p>
+<p>Dt_Customer: Date of customer’s enrollment with the company</p>
+<p>Recency: Number of days since customer’s last purchase</p>
+<p>Complain: 1 if the customer complained in the last 2 years, 0 otherwise</p>
+<p>MntWines: Amount spent on wine in last 2 years</p>
+<p>MntFruits: Amount spent on fruits in last 2 years</p>
+<p>MntMeatProducts: Amount spent on meat in last 2 years</p>
+<p>MntFishProducts: Amount spent on fish in last 2 years</p>
+<p>MntSweetProducts: Amount spent on sweets in last 2 years</p>
+<p>MntGoldProds: Amount spent on gold in last 2 years</p>
+<p>NumDealsPurchases: Number of purchases made with a discount</p>
+<p>AcceptedCmp1: 1 if customer accepted the offer in the 1st campaign, 0 otherwise</p>
+<p>AcceptedCmp2: 1 if customer accepted the offer in the 2nd campaign, 0 otherwise</p>
+<p>AcceptedCmp3: 1 if customer accepted the offer in the 3rd campaign, 0 otherwise</p> 
+<p>AcceptedCmp4: 1 if customer accepted the offer in the 4th campaign, 0 otherwise</p>
+<p>AcceptedCmp5: 1 if customer accepted the offer in the 5th campaign, 0 otherwise</p>
+<p>Response: 1 if customer accepted the offer in the last campaign, 0 otherwise</p>
+<p>NumWebPurchases: Number of purchases made through the company’s website</p>
+<p>NumCatalogPurchases: Number of purchases made using a catalogue</p>
+<p>NumStorePurchases: Number of purchases made directly in stores</p>
+<p>NumWebVisitsMonth: Number of visits to company’s website in the last month</p>
+<p>TotalPurchase is the sum of NumWebPurchases, NumCatalogPurchases, and NumStorePurchases.</p>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
